Update and change div to section html tag

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
             width: 90%;
 
         }
-        body{
+
+        body {
             padding: 0;
             margin: 0;
         }
@@ -90,11 +91,11 @@
 </head>
 
 <body>
-    <div class="container">
+    <section class="container">
 
-        <div class="section_one">
+        <section class="section_one">
 
-            <div class="section_one_left">
+            <section class="section_one_left">
                 <br>
                 <br>
                 <br>
@@ -107,36 +108,36 @@
                     Email : mdalifkhanrifat@gmail.com<br>
                     Mobile: +8801776641699<br>
                 </p>
-            </div>
-            <div class="section_one_right">
+            </section>
+            <section class="section_one_right">
 
                 <img class="p_img" src="img/img.png" alt="Picture">
-            </div>
+            </section>
 
-        </div>
+        </section>
 
-        <div class="section_two">
+        <section class="section_two">
             <p class="heading_boder"><b>Career Objective</b></p>
             <p class="extra_padding">
                 To work in a challenging environment with a scope of future progress applying my academic knowledge and
                 working capability. Would like to welcome the change to work as a part of a dynamic working team where
                 Icould make a significant contribution while developing my skill yet further.
             </p>
-        </div>
-        <div class="section_three">
+        </section>
+        <section class="section_three">
             <p class="heading_boder"><b>Present Statas</b></p>
             <p class="extra_padding">
                 To obtain a position that will allow me to utilize my technical skills, experience, and willingness to
                 make an organization successful. Seeking an entry-level position to begin my career in a high-level
                 professional environment.
             </p>
-        </div>
+        </section>
 
-        <div class="section_four">
-            <div>
+        <section class="section_four">
+            <section>
                 <p class="heading_boder"><b>Education</b></p>
-            </div>
-            <div class="extra_padding">
+            </section>
+            <section class="extra_padding">
                 <table class="euducation_table">
                     <tr>
                         <th class="table_td_h">Exam</th>
@@ -147,9 +148,9 @@
                     </tr>
                     <tr>
                         <td class="table_th">Graduation</td>
-                        <td class="table_th">UGC</td>
+                        <td class="table_th">-</td>
                         <td class="table_th">City University, Bangladesh</td>
-                        <td class="table_th">2018</td>
+                        <td class="table_th">2022</td>
                         <td class="table_th">3.47</td>
                     </tr>
                     <tr>
@@ -163,17 +164,17 @@
                         <td class="table_th">SSC</td>
                         <td class="table_th">Rajshahi</td>
                         <td class="table_th">S.B Railway Colony High School, Sirajganj</td>
-                        <td class="table_th">2018</td>
+                        <td class="table_th">2013</td>
                         <td class="table_th">4.34</td>
                     </tr>
                 </table>
-            </div>
+            </section>
 
-            <div class="section_five extra_padding">
+            <section class="section_five extra_padding">
                 <p class="heading_boder"><b>Computer Skills</b></p>
 
 
-                <div class="skil_info extra_padding">
+                <section class="skil_info extra_padding">
                     <table class="">
 
                         <tr>
@@ -208,18 +209,18 @@
                         </tr>
 
                     </table>
-                </div>
-            </div>
-        </div>
+                </section>
+            </section>
+        </section>
 
-        <div class="section_six extra_padding">
+        <section class="section_six extra_padding">
             <p class="heading_boder"><b>Professional Experience</b></p>
             <p>
                 No Professional Experience
             </p>
-        </div>
+        </section>
 
-        <div class="section_seven">
+        <section class="section_seven">
             <p class="heading_boder"><b>Projects</b></p>
 
             <dl>
@@ -237,8 +238,8 @@
 
             </dl>
 
-        </div>
-        <div class="section_eight">
+        </section>
+        <section class="section_eight">
             <p class="heading_boder"><b>Academic Projects</b></p>
 
             <dl>
@@ -279,19 +280,19 @@
                 </ul>
             </dl>
 
-        </div>
+        </section>
 
-        <div class="section_nine">
+        <section class="section_nine">
             <p class="heading_boder"><b>Achievements</b></p>
             <p>
                 To work in a challenging environment with a scope of future progress applying my
             </p>
-        </div>
+        </section>
 
-        <div class="section_ten">
+        <section class="section_ten">
             <p class="heading_boder"><b>Personal Information</b></p>
 
-            <div class="personal_info extra_padding">
+            <section class="personal_info extra_padding">
                 <table class="">
 
                     <tr>
@@ -345,24 +346,24 @@
                         <td>Soyadhangora KhanPara, Sirajganj Sadar, Sirajganj</td>
                     </tr>
                 </table>
-            </div>
-        </div>
+            </section>
+        </section>
 
-        <div class="section_ten extra_padding">
+        <section class="section_ten extra_padding">
             <p class="heading_boder"><b>Hobbies</b></p>
             <p>
                 To work in a challenging environment with a scope of future progress applying my
             </p>
-        </div>
+        </section>
 
-        <div class="section_eleven">
+        <section class="section_eleven">
             <p class="heading_boder"><b>Game</b></p>
             <p>
                 To work in a challenging environment with a scope of future progress applying my
             </p>
-        </div>
+        </section>
 
-        <div class="section_twelve">
+        <section class="section_twelve">
             <p class="heading_boder"><b>References</b></p>
             <dl class="extra_padding">
                 <dt><b>Name</b></dt>
@@ -377,11 +378,11 @@
                 <dt>Tele</dt>
             </dl>
 
-        </div>
+        </section>
         <footer class="extra_padding">
             <p style="text-align: center;">Copyright © Md Alif Kahn Rifat, 2022</p>
         </footer>
-    </div>
+    </section>
 
 </body>
 
